# Baud

./: Cargo.toml  LICENSE  README.md  cargo.toml
baud/: Cargo.toml
baud-cli/: Cargo.toml
baud-cli/src/: cli.rs  commands.rs  main.rs
baud-core/: Cargo.toml
baud-core/src/: connection.rs  lib.rs  serial.rs
baud/src/: main.rs  ui.rs
src/: main.rs
