[package]
name = "baud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ctrlc = "3.4.4"
ratatui = "0.26.3"
tokio-serial = "5.4.4"
tokio = { version = "1.37.0", features = ["full"] }
