[package]
name = "baud-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baud-core = { path = "../baud-core" }
clap = "4.5.3"
tokio = { version = "1.36.0", features = ["full"] }   # TODO: Edit to only use the necessary features
