[package]
name = "baud-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.3.0"
tokio = { version = "1.36.0", features = ["full"] }   # TODO: Edit to only use the necessary features
tokio-serial = "5.4.4"
